.toolbox/dual-reslim-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-nginx
spec:
  containers:
  - image: europe-west1-docker.pkg.dev/polytech-dijon/polytech-dijon/kuard:blue
    name: kuard
    resources: 
      requests:
        cpu: 250m
        memory: 128Mi
      limits:
        cpu: 500m
        memory: 256Mi
    ports:
      - containerPort: 8080
        name: http
  - image: nginx
    name: nginx
    resources:
      requests:
        cpu: 250m
        memory: 128Mi
      limits: 
        cpu: 500m
        memory: 256Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
