.toolbox/exemple-gateway-api.yaml
# GKE Gateway API need to be enabled
apiVersion: v1
kind: Namespace
metadata: 
  name: gateway
  labels:
    demo: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-formation
  namespace: gateway
  labels:
    demo: gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.forma.kiowy.net"
    allowedRoutes:
      namespaces:
        from: All
#  - name: https
#    protocol: HTTPS
#    port: 443
#    hostname: foo.example.com
#    tls:
#      certificateRefs:
#      - kind: Secret
#        group: "*.forma.kiowy.net."
#        name: wildcard-forma-kiowy-net
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
  namespace: default
  labels:
    demo: gateway
spec:
  parentRefs:
  - name: gw-formation
    namespace: gateway
  hostnames:
  - "test.forma.kiowy.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: test
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: default
  labels:
    demo: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
      base: nginx
  template:
    metadata:
      labels:
        app: test
        base: nginx
    spec:
      containers:
        - name: ctn
          image: nginx:latest
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: page
              mountPath: /usr/share/nginx/html
      volumes:
        - name: page
          configMap:
            name: page
---
apiVersion: v1
kind: Service
metadata:
  labels:
    demo: gateway
  name: test
  namespace: default
spec:
  type: ClusterIP
  ports: 
    - port: 80
      name: http
  selector:
    app: test
    base: nginx
# k get gateway,httproute,cm,deploy,svc,ns -A -l demo=gateway
# k delete gateway,httproute,cm,deploy,svc,ns -A -l demo=gateway
