.toolbox/exemple-ingresses-post-guestbook.yaml
# Install ingress-nginx --> kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.0/deploy/static/provider/cloud/deploy.yaml
# Create the 'guestbook.forma.kiowy.net' A entry to k8s-formation Cloud DNS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-guestbook-a
  namespace: <namespace-a>
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: guestbook.forma.kiowy.net
    http:
      paths:
      - path: /<namespace-a>(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-guestbook-b
  namespace: <namespace-b>
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: guestbook.forma.kiowy.net
    http:
      paths:
      - path: /<namespace-b>(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
  ingressClassName: nginx
